--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     -->
     <title>React App</title>
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Bungee+Outline&display=swap');
-</style>
+      @import url("https://fonts.googleapis.com/css2?family=Bungee+Outline&display=swap");
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
